# project_learn_gtest

./: 1_gtest_installation.md  README.md
GoogleTestProject/: CMakeLists.txt  LibraryCode.cpp  LibraryCode.hpp  main.cpp
GoogleTestProject_backup_mock_full/: Employee.hpp  IDatabaseConnection.cpp
